--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,8 +13,8 @@ main:
   - name: Projects
     url: '#projects'
     weight: 30
-  - name: Miscellaneous
-    url: '#misc'
+  - name: Misc.
+    url: '#about'
     weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
