--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -14,7 +14,7 @@ main:
     url: '#projects'
     weight: 30
   - name: Misc.
-    url: '#new-misc'
+    url: '#post'
     weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
